@@ -1,10 +1,4 @@
 /*
- * %W% %E%
- *
- * Copyright 2002 Sun Microsystems, Inc. All rights reserved.
- * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
- */
-/*****************************************************************************
  * Copyright (c) 2003 Sun Microsystems, Inc.  All Rights Reserved.
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
@@ -38,23 +32,25 @@
  *****************************************************************************/
 package net.java.games.input;
 
+import java.lang.reflect.Array;
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * @author elias
  * @version 1.0
  */
-final class DataQueue {
-	private final Object[] elements;
+final class DataQueue<T> {
+	private final T[] elements;
 	private int position;
 	private int limit;
 
-	public DataQueue(int size, Class element_type) {
-		this.elements= new Object[size];
+    @SuppressWarnings("unchecked")
+	public DataQueue(int size, Class<T> element_type) {
+		this.elements= (T[])Array.newInstance(element_type, size);
 		for (int i = 0; i < elements.length; i++) {
 			try {
-				elements[i] = element_type.newInstance();
-			} catch (InstantiationException e) {
-				throw new RuntimeException(e);
-			} catch (IllegalAccessException e) {
+				elements[i] = element_type.getDeclaredConstructor().newInstance();
+			} catch (InstantiationException|IllegalAccessException|NoSuchMethodException|InvocationTargetException e) {
 				throw new RuntimeException(e);
 			}
 		}
@@ -74,12 +70,12 @@ final class DataQueue {
 		return limit;
 	}
 
-	public final Object get(int index) {
+	public final T get(int index) {
 		assert index < limit;
 		return elements[index];
 	}
 
-	public final Object get() {
+	public final T get() {
 		if (!hasRemaining())
 			return null;
 		return get(position++);
@@ -97,7 +93,7 @@ final class DataQueue {
 	}
 
 	private final void swap(int index1, int index2) {
-		Object temp = elements[index1];
+		T temp = elements[index1];
 		elements[index1] = elements[index2];
 		elements[index2] = temp;
 	}
@@ -119,7 +115,7 @@ final class DataQueue {
 		this.position = position;
 	}
 
-	public final Object[] getElements() {
+	public final T[] getElements() {
 		return elements;
 	}
 }
